<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".RegisterActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="73dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="204dp"
                android:contentDescription="@string/todo"
                android:scaleType="center" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_image"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="17dp"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="screen"
                android:cursorVisible="true"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColorHint="#000000"
                tools:targetApi="o" />

            <ImageView
                android:id="@+id/email_image"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_cl_2"
                android:src="@drawable/email_logo" />

            <ImageView
                android:id="@+id/mdp_image"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:layout_below="@id/email"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="11dp"
                android:contentDescription="@string/image_clé"
                android:src="@drawable/mdp_logo" />

            <EditText
                android:id="@+id/mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="screen"
                android:cursorVisible="true"
                android:hint="@string/mdp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColorHint="#000000"
                tools:targetApi="o" />

            <Button
                android:id="@+id/connexion"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/mdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:background="@drawable/btn_custom"
                android:text="@string/connecter_nom"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pasdecompte"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/connexion"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_custom"
                android:text="Créer un compte"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mdpOublie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pasdecompte"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/mdp_link"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>

